[project]
name = "research-agent"
version = "0.1.0"
description = "研究助手 Agent：检索、阅读、总结、记忆、输出"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "openai>=1.0",
    "typer>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "config", "src"]
